# pingti_lerobot_bridge

./: .gitignore  README.md  pyproject.toml
.cache/calibration/nong_bot/: left_leader.json  main_leader.json  right_leader.json
.cache/calibration/pingti/: main_follower.json  main_leader.json
docs/: data_record_guide.md  pingti_lerobot_bridge_tutorial.md
examples/: use_pingti_arm.py
pingti/: calibrate.py  record.py  replay.py  teleoperate.py
pingti/common/device/: PingtiManipulator.py  PingtiMobileManipulator.py  configs.py  feetech_motor_group.py  lekiwi_pingti_remote.py  utils.py
pingti/robots/: utils.py
pingti/robots/action_filters/: ACTION_FILTERING_README.md
pingti/robots/bi_pingti_follower/: bi_pingti_follower.py
pingti/robots/pingti_follower/: config_pingti_follower.py  pingti_follower.py
pingti/scripts/: control_pingti_robot.py  hello_world.py
pingti/scripts/benchmark/: BENCHMARK_README.md  BENCHMARK_README_CN.md
pingti/scripts/server/: constants.py  pingti_robot_client.py
tests/action_filters/: test_action_filters.py
